# Ocelint

./: .gitignore  .pre-commit-hooks.yaml  README.md  ocelint_implementation_plan.docx  pyproject.toml
.github/workflows/: ci.yml  vscode.yml
ocelint-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
ocelint-vscode/scripts/: make-icon.py
ocelint-vscode/src/: config.ts  diagnostics.ts  extension.ts  runner.ts  statusBar.ts  types.ts
src/ocelint/: __main__.py
src/ocelint/cli/: __init__.py
src/ocelint/config/: __init__.py
src/ocelint/engine/: __init__.py
src/ocelint/loader/: __init__.py
src/ocelint/model/: __init__.py
src/ocelint/rules/: __init__.py  complexity.py  logical.py  pm_readiness.py  qualifier.py  referential.py  structural.py  temporal.py
src/ocelint/sdk/: __init__.py
tests/: test_cli.py  test_config.py  test_engine.py  test_loader.py  test_loader_reference.py  test_model.py  test_rules_complexity.py  test_rules_logical.py  test_rules_pm_readiness.py  test_rules_qualifier.py  test_rules_referential.py  test_rules_structural.py  test_rules_temporal.py
