[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocelint"
version = "0.1.0"
description = "A semantic linter for OCEL 2.0 (Object-Centric Event Log) files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aziz Ketata" }]
keywords = ["ocel", "process-mining", "object-centric", "linter", "data-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "click>=8.1",
    "jsonschema>=4.0",
    "lxml>=4.9",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
    "rich>=13.0",
    'tomli>=2.0; python_version < "3.11"',
]

[project.optional-dependencies]
pm4py = ["pm4py>=2.7"]
graph = ["networkx>=3.0"]
numpy = ["numpy>=1.24"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.90",
    "mutmut>=2.4",
    "mypy>=1.7",
    "ruff>=0.1.0",
]

[project.scripts]
ocelint = "ocelint.cli:main"

[project.urls]
Homepage = "https://github.com/azizketata/ocelint"
Documentation = "https://github.com/azizketata/ocelint#readme"
Issues = "https://github.com/azizketata/ocelint/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/ocelint"]

[[tool.mypy.overrides]]
module = ["lxml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/ocelint"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
